@@ -78,6 +78,11 @@ Changes in behaviour not resulting in compilation errors
   previous behaviour in wxMSW, when these events were always generated in this
   case. Please add wxTE_PROCESS_ENTER style if you relied on the old behaviour.
 
+- wxGLCanvas now uses physical pixels on high DPI displays under platforms
+  where they're different from logical ones (wxGTK3, wxOSX). Multiply logical
+  coordinates, e.g. returned by wxWindow::GetSize() by GetContentScaleFactor()
+  before using them with OpenGL functions.
+
 
 Changes in behaviour which may result in build errors
 -----------------------------------------------------
